--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
     <!-- Header -->
     <header class="main-header">
         <div class="container">
-            <h1 class="site-title">Rocket League 6 Gents</h1>
+            <h1 class="site-title">Rocket League Six Gents</h1>
             <p class="site-subtitle">Discord Bot Leaderboard & Stats</p>
         </div>
     </header>
