--- a/templates/home.html
+++ b/templates/home.html
@@ -1,22 +1,19 @@
 {% extends "base.html" %}
 
-{% block title %}Rocket League 6 Gents - Home{% endblock %}
+{% block title %}Rocket League Six Gents - Home{% endblock %}
 
 {% block content %}
 <!-- Hero Section -->
 <div class="content-container mb-4">
     <div class="row align-items-center">
         <div class="col-lg-7">
-            <h2 class="mb-3">Welcome to Rocket League 6 Gents</h2>
+            <h2 class="mb-3">Welcome to Rocket League Six Gents</h2>
             <p class="lead mb-4">The casual competitive matchmaking system for the banditos server!</p>
             <div class="d-flex flex-wrap gap-2">
                 <a href="{{ url_for('leaderboard') }}" class="btn btn-secondary">
                     <i class="fas fa-trophy me-2"></i> View Leaderboard
                 </a>
             </div>
-        </div>
-        <div class="col-lg-5 mt-4 mt-lg-0">
-            <img src="{{ url_for('static', filename='img/rocket-league-hero.png') }}" alt="Rocket League 6 Gents" class="img-fluid rounded">
         </div>
     </div>
 </div>
