--- a/templates/base.html
+++ b/templates/base.html
@@ -60,25 +60,8 @@
                             </a>
                         </li>
                     </ul>
-                    {% if session.user %}
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="/profile">Profile</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/settings">Settings</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/logout">Logout</a>
-                </li>
-            </ul>
-            {% else %}
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="/login">Login with Discord</a>
-                </li>
-            </ul>
-            {% endif %}
+                </div>
+            </div>
         </nav>
     </div>
 
