--- a/templates/home.html
+++ b/templates/home.html
@@ -224,7 +224,7 @@
         <h3 class="step-title">1. Join the Queue</h3>
       </div>
       <p class="step-description">
-        Use the <code>/join</code> command in your Discord server to join the 6 gents queue.
+        Use the <code>/queue</code> command in your Discord server to join the 6 gents queue.
         Once 6 players have joined, a match will be created.
       </p>
     </div>
@@ -305,7 +305,7 @@
     </thead>
     <tbody>
       <tr>
-        <td><span class="command-name">/join</span></td>
+        <td><span class="command-name">/queue</span></td>
         <td class="command-description">Join the 6 gents queue</td>
       </tr>
       <tr>
